# kerygma-clips

./: .dockerignore  .env.dusk.local  .env.example  .gitignore  .prettierignore  CLAUDE.md  Caddyfile  Dockerfile  Procfile  README.md  app.json  composer.json  entrypoint.sh  package-lock.json  package.json  phpstan.neon  phpunit.xml  pyproject.toml  release.sh  vite.config.js
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: deploy.yml  preview-deploy.yml  test.yml
app/Enums/: ClipStatus.php  JobStatus.php  TranscriptStatus.php  VideoType.php
app/Events/: SermonClipUpdated.php  SermonVideoUpdated.php
app/Jobs/: ConvertToVerticalVideo.php  DeleteFromYouTube.php  ExtractPreviewFrame.php  ExtractSermonClipVerticalVideo.php  ExtractVideoClipVerticalVideo.php  GenerateClipThumbnail.php  GenerateSermonClipTitle.php  GenerateVideoClipTitle.php  PublishSermonClipToFacebook.php  ScanImportVideos.php  ScanSermonVideos.php  TranscribeSermonVideo.php  TranscribeVideo.php  UpdateYouTubeSchedule.php  UploadToYouTube.php
app/Models/: SermonClip.php  SermonVideo.php  Setting.php  Settings.php  Video.php  VideoClip.php
app/Providers/: AppServiceProvider.php
app/Services/: CaptionGenerator.php  FacebookReelsService.php  LectionaryService.php  (+4 more)
bootstrap/: app.php
config/: app.php  database.php  filesystems.php  services.php
docs/: sample_transcript.jsonc
routes/: channels.php  console.php  web.php
scripts/: segment_person.py  setup_claude_code.sh  transcribe.py
tests/: DuskTestCase.php  Pest.php
(+144 files in other folders)
