[project]
name = "kerygma-clips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "whisperx>=3.7.4",
    "mediapipe>=0.10.14",
    "opencv-python-headless>=4.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "ruff>=0.11",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["mediapipe.*", "cv2.*", "whisperx.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
